spacing corrections

--- a/app/pages/multisig/ProposalView/ProposalView.module.scss
+++ b/app/pages/multisig/ProposalView/ProposalView.module.scss
@@ -22,6 +22,8 @@
 }
 
 .finalCheckbox {
+    composes: mB10 from global;
+
     input:disabled ~ * {
         color: $color-text-faded;
     }
